HelloUltraviolet/Fixtures/RejectedSource/SourceText/InvalidUTF8/Source/Main.uv
public procedure invalidUTF8Reference() -> i32 {
    return ÿ
}
